Fix alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,7 @@ h1 {
     justify-content: center;
     align-items: center;
     margin-top: 50px;
-    margin-right: 13px;
+    margin-right: 7px;
     font-size: 70px;
     color: #696969;
 }
